# SGPV2

./: .env.example  .gitignore  Dockerfile  PRD_Sistema_Gestion_Compras_v2_0.docx  README.md  SGP_DISENO_TECNICO_v2.md  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0002_add_pending_management_approval.py  0003_add_assignee_and_sla_columns.py  0004_add_solicitud_adjuntos.py  0005_add_phase_status_to_adjuntos.py  0006_simplify_workflow_and_link_item_to_cc.py
docs/: arquitectura.md  decisiones.md  deploy.md  flujo_proceso_usuario.md  frontend.md  notificaciones_pendiente.md  roadmap.md  transiciones_sc.md
frontend/: api.js  aprobador-bandeja.jsx  aprobador-detalle.jsx  dashboard.jsx  data-source.jsx  data.jsx  form.jsx  index.html  layout.jsx  role-selector.jsx  styles-aprobador.css  styles.css  tracking.jsx
scripts/: seed.py  start.sh
sgp-api/: README.md  docker-compose.yml  pyproject.toml  railway.json
sgp-api/alembic/: env.py
sgp-api/alembic/versions/: 0001_initial_schema.py
sgp-api/src/sgp/: __init__.py  main.py
sgp-api/tests/: test_solicitudes_service.py
solicitudes-de-pedido/: README.md
solicitudes-de-pedido/project/: api.js  aprobador-bandeja.jsx  data-source.jsx  icons.jsx  notifications.jsx  tracking.jsx  ui.jsx
src/sgp/: main.py
src/sgp/api/: v1.py
src/sgp/core/: __init__.py  audit.py  (+3 more)
tests/: conftest.py  test_adjuntos_service.py  test_gastos_service.py  test_solicitudes_service.py  test_state_machine.py
tests/integration/: conftest.py  test_postgres_smoke.py
(+40 files in other folders)
