[project]
name = "sgp-api"
version = "0.1.0"
description = "Sistema de Gestión de Compras (SGP) — API"
requires-python = ">=3.12"
authors = [
    { name = "Excelencia Operacional", email = "victor@empresa.cl" },
]
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Validación / serialización
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Utilidades
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "holidays>=0.62",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sgp"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "postgres: smoke tests que requieren Postgres real (skip si DATABASE_URL no es Postgres)",
]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["alembic/", "tests/"]
